--- a/styles/style.css
+++ b/styles/style.css
@@ -7,11 +7,11 @@ body{
 }
 .container{
     margin-top: 70px;
+    width: 60%;
 }
 /* Header Styles */
 .header-container{
     display: flex;
-    
     background-color: #2D25A0;
 }
 .header-title{
@@ -26,6 +26,12 @@ body{
     background-color: #E02C6D;
     padding: 10px 24px;
 }
+.link-button:hover{
+    transform: scale(1.2);
+}
+.link-button:hover{
+    transition: transform 1.2s ease-in-out;
+}
 .link-button a{
     text-decoration: none;
     color: white;
@@ -37,8 +43,13 @@ body{
     margin: 153px 141px 86px;
 }
 /* Players images and Description Styles */
+.players{
+    display: grid;
+    grid-template-columns:repeat(3, 1fr);
+}
 .player{
-    padding: 15px;
+    padding: 25px;
+    margin-left: 50px;
 }
 .player img{
     width: 300px;
