--- a/styles/style.css
+++ b/styles/style.css
@@ -58,3 +58,88 @@ body{
 .player p{
     width: 300px;
 }
+
+/* Statistics and Join Now Area Styles */
+.main-area{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 165px;
+    
+}
+.statistics-area{
+    background-color: #2D25A0;
+    height: 250px;
+    width: 600px;
+    border-radius: 150px;
+}
+.statistics-item{
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch;
+    position: relative;top: 60px; 
+}
+.statistics-item h1{
+    color: white;
+    font-weight: bolder;
+}
+.statistics-item p{
+    color: red;
+}
+.join-area{
+    background-color: #5D2E1E;
+    height: 250px;
+    width: 600px;
+    border-radius: 150px;
+    
+}
+.join-container{
+    display: flex;
+    justify-content: center;
+}
+.join-form{
+    display: flex;
+    flex-direction: column;
+}
+.join-form input{
+    font-size: 1.3em;
+    margin-top: 2px;
+    border: 1px solid lightgray;
+    padding-left: 10px;
+    border-radius: 12px;
+}
+.join-form button{
+    background-color: orange;
+    color: whitesmoke;
+    font-weight: 700;
+}
+
+/* Footer Area Styles */
+footer{
+    margin-top: 158px;
+}
+footer p{
+    text-align: center;
+}
+.footer-image img{
+    width: 483.87px;
+    height: 110px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+.social-icon{
+    text-align: center;
+}
+.social-icon .fa-instagram{
+    margin-right: 14px;
+}
+.social-icon .fa-facebook{
+    margin-right: 14px;
+}
+.social-icon .fa-twitter-square{
+    margin-right: 14px;
+}
+.social-icon .fa-youtube{
+    margin-right: 14px;
+}
